tolerate localized StationAPI process logs